virtualservices/api-example-com-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: vs
  namespace: gloo-system
  labels:
    app: httpbin
spec:
  virtualHost:
    domains:
    - 'api.example.com'
    routes:
    # - matchers:
    #   - prefix: /callback
    #   options:
    #     prefixRewrite: '/login'
    #   routeAction:
    #     single:
    #       upstream:
    #         name: default-httpbin-8000
    #         namespace: gloo-system
    - matchers:
      - prefix: /httpbin
      routeAction:
        single:
          upstream:
            name: default-httpbin-8000
            namespace: gloo-system 
      options:
        prefixRewrite: /
    options:
      stagedTransformations:
        regular:
          requestTransforms:
          - requestTransformation:
              transformationTemplate:     
                ignoreErrorOnParse: true
                extractors:
                  test:
                    header: foo
                    regex: '.*'
